--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,48 @@
 version: '3.8'
 
 services:
-  app:
+  # Frontend Application
+  frontend:
     build:
       context: .
       dockerfile: Dockerfile
+      target: production
+    container_name: liraza-frontend
     ports:
-      - "8080:80"
+      - "3000:80"
     environment:
-      - VITE_SUPABASE_URL=${VITE_SUPABASE_URL}
-      - VITE_SUPABASE_PROJECT_ID=${VITE_SUPABASE_PROJECT_ID}
       - NODE_ENV=production
     restart: unless-stopped
-    container_name: liraza-app
+    networks:
+      - liraza-network
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  # Development frontend with hot reload (optional)
+  frontend-dev:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    container_name: liraza-frontend-dev
+    ports:
+      - "5173:5173"
+    volumes:
+      - .:/app
+      - /app/node_modules
+    environment:
+      - VITE_SUPABASE_URL=${VITE_SUPABASE_URL}
+      - VITE_SUPABASE_PUBLISHABLE_KEY=${VITE_SUPABASE_PUBLISHABLE_KEY}
+      - NODE_ENV=development
+    restart: unless-stopped
+    networks:
+      - liraza-network
+    profiles:
+      - dev
+
+networks:
+  liraza-network:
+    driver: bridge
